기존 MirrorMaker 옵션을 그대로 사용할 수 있도록 shell파일 수정